// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lsCommand should work with no plugin 1`] = `
{
  "logCalls": [
    [
      "debug",
      "✅ - No commands folder found at path "/home/whoiam/whook-project/dist".",
    ],
    [
      "info",
      "

# Provided by "My Super project!": none",
    ],
  ],
  "promptArgsCalls": [
    [],
  ],
  "readDirCalls": [
    [
      "/home/whoiam/whook-project/dist/commands",
    ],
  ],
  "requireCalls": [],
  "result": undefined,
}
`;

exports[`lsCommand should work with some plugins 1`] = `
{
  "logCalls": [
    [
      "debug",
      "✅ - No commands folder found at path "/var/lib/node/node_modules/@whook/lol/dist".",
    ],
    [
      "debug",
      "✅ - No commands folder found at path "/var/lib/node/node_modules/@whook/cli/dist".",
    ],
    [
      "info",
      "

# Provided by "project": 2 commands",
    ],
    [
      "info",
      "- ls: Print available commands",
    ],
    [
      "info",
      "- env: A command printing env values",
    ],
    [
      "info",
      "

# Provided by "@whook/cli": none",
    ],
    [
      "info",
      "

# Provided by "@whook/whook": none",
    ],
  ],
  "promptArgsCalls": [
    [],
  ],
  "readDirCalls": [
    [
      "/home/whoiam/whook-project/dist/commands",
    ],
    [
      "/var/lib/node/node_modules/@whook/cli/dist/commands",
    ],
    [
      "/var/lib/node/node_modules/@whook/lol/dist/commands",
    ],
  ],
  "requireCalls": [
    [
      "/home/whoiam/whook-project/dist/commands/ls.js",
    ],
    [
      "/home/whoiam/whook-project/dist/commands/env.js",
    ],
  ],
}
`;

exports[`lsCommand should work with some plugins and a verbose output 1`] = `
{
  "logCalls": [
    [
      "debug",
      "✅ - No commands folder found at path "/var/lib/node/node_modules/@whook/lol/dist".",
    ],
    [
      "debug",
      "✅ - No commands folder found at path "/var/lib/node/node_modules/@whook/cli/dist".",
    ],
    [
      "info",
      "

# Provided by "My Super project!": 2 commands
",
    ],
    [
      "info",
      "- ls: Print available commands
$ whook ls
",
    ],
    [
      "info",
      "- env: A command printing env values
$ whook env --name NODE_ENV --default "default value"
",
    ],
    [
      "info",
      "

# Provided by "@whook/cli": none
",
    ],
    [
      "info",
      "

# Provided by "@whook/whook": none
",
    ],
  ],
  "promptArgsCalls": [
    [],
  ],
  "readDirCalls": [
    [
      "/home/whoiam/whook-project/dist/commands",
    ],
    [
      "/var/lib/node/node_modules/@whook/cli/dist/commands",
    ],
    [
      "/var/lib/node/node_modules/@whook/lol/dist/commands",
    ],
  ],
  "requireCalls": [
    [
      "/home/whoiam/whook-project/dist/commands/ls.js",
    ],
    [
      "/home/whoiam/whook-project/dist/commands/env.js",
    ],
  ],
}
`;

exports[`lsCommand should work with some plugins and ignored files 1`] = `
{
  "logCalls": [
    [
      "debug",
      "✅ - No commands folder found at path "/var/lib/node/node_modules/@whook/lol/dist".",
    ],
    [
      "debug",
      "✅ - No commands folder found at path "/var/lib/node/node_modules/@whook/cli/dist".",
    ],
    [
      "info",
      "

# Provided by "project": 2 commands",
    ],
    [
      "info",
      "- ls: Print available commands",
    ],
    [
      "info",
      "- env: A command printing env values",
    ],
    [
      "info",
      "

# Provided by "@whook/cli": none",
    ],
    [
      "info",
      "

# Provided by "@whook/whook": none",
    ],
  ],
  "promptArgsCalls": [
    [],
  ],
  "readDirCalls": [
    [
      "/home/whoiam/whook-project/dist/commands",
    ],
    [
      "/var/lib/node/node_modules/@whook/cli/dist/commands",
    ],
    [
      "/var/lib/node/node_modules/@whook/lol/dist/commands",
    ],
  ],
  "requireCalls": [
    [
      "/home/whoiam/whook-project/dist/commands/ls.js",
    ],
    [
      "/home/whoiam/whook-project/dist/commands/env.js",
    ],
  ],
}
`;
